// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders alt correctly 1`] = `
<div
  className="sc-1e38spu-0 bAImKy"
>
  <input
    className="sc-1e38spu-0 djHjgm"
    type="radio"
  />
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 fIXijI sc-1e38spu-0 iOJaJW"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="8"
      fill="#D64A36"
      r="8"
    />
    <circle
      cx="8"
      cy="8"
      r="7.5"
      stroke="#D64A36"
    />
    <circle
      cx="8"
      cy="8"
      fill="white"
      r="4"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 jVLrgW sc-1e38spu-0 iOJaJW"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="8"
      fill="white"
      r="8"
    />
    <circle
      cx="8"
      cy="8"
      r="7.5"
      stroke="#E7E7E6"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 fpqGME sc-1e38spu-0 iOJaJW"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="8"
      fill="#F5F5F5"
      r="8"
    />
    <circle
      cx="8"
      cy="8"
      r="7.5"
      stroke="#F5F5F5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 jPcRlm sc-1e38spu-0 iOJaJW"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="8"
      fill="#F5F5F5"
      r="8"
    />
    <circle
      cx="8"
      cy="8"
      r="7.5"
      stroke="#F5F5F5"
    />
    <circle
      cx="8"
      cy="8"
      fill="#BABABA"
      r="4"
    />
  </svg>
</div>
`;

exports[`Radio renders correctly 1`] = `
<div
  className="sc-1e38spu-0 bAImKy"
>
  <input
    className="sc-1e38spu-0 djHjgm"
    type="radio"
  />
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 fIXijI sc-1e38spu-0 iOJaJW"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="8"
      fill="white"
      r="8"
    />
    <circle
      cx="8"
      cy="8"
      r="7.5"
      stroke="#C2C2C2"
    />
    <circle
      cx="8"
      cy="8"
      fill="#D64A36"
      r="4"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 jVLrgW sc-1e38spu-0 iOJaJW"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="8"
      fill="white"
      r="8"
    />
    <circle
      cx="8"
      cy="8"
      r="7.5"
      stroke="#E7E7E6"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 fpqGME sc-1e38spu-0 iOJaJW"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="8"
      fill="#F5F5F5"
      r="8"
    />
    <circle
      cx="8"
      cy="8"
      r="7.5"
      stroke="#F5F5F5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="sc-1e38spu-0 jPcRlm sc-1e38spu-0 iOJaJW"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="8"
      fill="#F5F5F5"
      r="8"
    />
    <circle
      cx="8"
      cy="8"
      r="7.5"
      stroke="#F5F5F5"
    />
    <circle
      cx="8"
      cy="8"
      fill="#BABABA"
      r="4"
    />
  </svg>
</div>
`;
